# athon-tech

./: Passwords  README.md  login  report.md
backend/: .gitignore  pyproject.toml  requirements.txt  seed_data.py  seed_parents.py
backend/alembic/: alembic.ini  env.py  script.py.mako
backend/alembic/versions/: 20260602_1200_create_periods_and_timetable_entries.py  20260608_0100_create_announcements_table.py  f65f053e7d10_stamp_initial_schema.py
backend/app/: main.py
backend/app/common/: pagination.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  academic_class.py  academic_term.py  academic_year.py  ai_generation.py  announcement.py  attendance.py  audit_log.py  base.py  class_enrollment.py  enums.py  homework.py  homework_answer.py  homework_question.py  homework_submission.py  notification.py  notification_recipient.py  parent.py  period.py  principal.py  school.py  student.py  student_parent.py  subject.py  teacher.py  teacher_class_subject.py  test.py  test_answer.py  test_attempt.py  test_question.py  timetable_entry.py  user.py
backend/app/repository/: academic_term.py  academic_year.py  announcement_repo.py  attendance_repo.py  base.py  class_enrollment_repo.py  class_enrollments.py  class_repo.py  homework_repo.py  homework_submission_repo.py  notification_recipient_repo.py  notification_repo.py  parents.py  period_repo.py  principals.py  reports.py  schools.py  student_parents.py  students.py  subject_repo.py  (+6 more)
backend/scripts/: create_demo_user.py  fix_auth_users.py  setup_database.py  sync_auth_users.py
(+258 files in other folders)
