[project]
name = "athon-backend"
version = "0.1.0"
description = "AI-powered teacher productivity and parent communication platform"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Configuration & Environment
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",

    # Supabase (auth only; we use SQLAlchemy for DB access)
    "supabase-auth>=2.30.0",
    "postgrest>=2.30.0",

    # Background Jobs
    "celery>=5.4.0",
    "redis>=5.2.0",

    # HTTP Client
    "httpx>=0.28.0",

    # Utility
    "python-multipart>=0.0.17",
    "python-jose[cryptography]>=3.3.0",
    "pytz>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.setuptools.packages.find]
include = ["app"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
